[package]
name = "reqwest-proxy-pool"
version = "0.1.0"
edition = "2021"
description = "High available distributed ip proxy pool base on redis"
license = "MIT"
authors = ["holmofy"]
repository = "https://github.com/holmofy/reqwest-scraper"

[dependencies]
reqwest = { version = "0.12", features = ["json", "socks"] }
reqwest-scraper = "0.4"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
inventory = "0.3"
async-trait = "0.1"
tokio = "1"
log = "0.4"
itertools = "0.13"
redis = { version = "0.26", features = ["connection-manager", "tokio-comp"] }
chrono = "0.4"

[dev-dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
